--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^24.3.0",
+    "@types/node-forge": "^1.3.13",
     "concurrently": "^9.2.0",
     "css-loader": "^7.1.2",
     "electron": "^37.3.0",
@@ -40,6 +41,7 @@
     "@types/react-dom": "^19.1.7",
     "antd": "^5.27.0",
     "electron-store": "^10.1.0",
+    "node-forge": "^1.3.1",
     "node-rsa": "^1.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
