--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "author": "RiSA Team",
   "license": "MIT",
   "description": "RiSA - RSA Encryption Desktop Application with Postman-style GUI",
-  "homepage": "https://github.com/your-username/risa",
+  "homepage": "https://github.com/0-ROK/RiSA",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/risa.git"
+    "url": "https://github.com/0-ROK/RiSA.git"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
@@ -131,8 +131,8 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "your-username",
-        "repo": "risa"
+        "owner": "0-ROK",
+        "repo": "RiSA"
       }
     ]
   }
