fix: GitHub Release 업로드 에러 해결
- package.json 버전을 0.1.3으로 업데이트
- 릴리즈 파일 경로를 release/ 디렉토리로 제한
- 중복 파일 업로드 방지 (elevate.exe, RiSA.exe)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -185,13 +185,13 @@ jobs:
           prerelease: false
           generate_release_notes: true
           files: |
-            **/*.exe
-            **/*.msi
-            **/*.dmg
-            **/*.zip
-            **/*.AppImage
-            **/*.deb
-            **/*.rpm
+            release/*.exe
+            release/*.msi
+            release/*.dmg
+            release/*.zip
+            release/*.AppImage
+            release/*.deb
+            release/*.rpm
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
