--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,6 @@ env:
   APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
   APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
   APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-  WIN_CSC_LINK: ${{ secrets.WIN_CSC_LINK }}
-  WIN_CSC_KEY_PASSWORD: ${{ secrets.WIN_CSC_KEY_PASSWORD }}
 
   # CI and build configuration
   CI: true
@@ -32,11 +30,7 @@ permissions:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
@@ -78,8 +72,7 @@ jobs:
       - name: Build application
         run: pnpm run build
 
-      - name: Import Apple certificate (macOS only)
-        if: matrix.os == 'macos-latest'
+      - name: Import Apple certificate
         run: |
           if [ -n "$APPLE_CERTIFICATE" ]; then
             echo "Setting up Apple certificate..."
@@ -120,54 +113,7 @@ jobs:
             echo "No Apple certificate found in secrets"
           fi
 
-      - name: Validate secrets (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          echo "Linux 빌드에서는 별도의 secret 검증이 필요하지 않습니다."
-
-      - name: Package application (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: pnpm run package:linux
-
-      - name: List built files (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          echo "=== Built files for Linux ==="
-          find . -type f \( -name "*.AppImage" -o -name "*.deb" -o -name "*.rpm" \) -exec ls -la {} \;
-
-      - name: Validate secrets (Windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          if [ -z "$WIN_CSC_LINK" ]; then
-            echo "❌ ERROR: WIN_CSC_LINK secret이 설정되지 않았습니다."
-            echo "Windows 코드 사이닝을 위해 WIN_CSC_LINK secret을 설정해주세요."
-            exit 1
-          fi
-
-          if [ -z "$WIN_CSC_KEY_PASSWORD" ]; then
-            echo "❌ ERROR: WIN_CSC_KEY_PASSWORD secret이 설정되지 않았습니다."
-            echo "Windows 코드 사이닝을 위해 WIN_CSC_KEY_PASSWORD secret을 설정해주세요."
-            exit 1
-          fi
-
-          echo "✅ Windows 코드 사이닝 secrets가 모두 설정되었습니다."
-        shell: bash
-
-      - name: Package application (Windows)
-        if: matrix.os == 'windows-latest'
-        env:
-          CSC_IDENTITY_AUTO_DISCOVERY: false
-        run: pnpm run package:win
-
-      - name: List built files (Windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          echo "=== Built files for Windows ==="
-          Get-ChildItem -Recurse -Include "*.exe","*.msi" | ForEach-Object { Write-Host $_.FullName "; Size:" $_.Length }
-        shell: powershell
-
-      - name: Validate secrets (macOS)
-        if: matrix.os == 'macos-latest'
+      - name: Validate secrets
         run: |
           # Apple 인증서 관련 secrets 검증
           if [ -z "$APPLE_CERTIFICATE" ]; then
@@ -204,8 +150,7 @@ jobs:
           echo "✅ macOS 코드 사이닝 및 노타리제이션 secrets가 모두 설정되었습니다."
         shell: bash
 
-      - name: Package application (macOS)
-        if: matrix.os == 'macos-latest'
+      - name: Package application
         run: |
           # Check if certificate was imported (suppress sensitive output)
           if security find-identity -p codesigning | grep -q "Developer ID Application" 2>/dev/null; then
@@ -231,8 +176,7 @@ jobs:
             exit 1
           fi
 
-      - name: List built files (macOS)
-        if: matrix.os == 'macos-latest'
+      - name: List built files
         run: |
           echo "=== Built files for macOS ==="
           find . -type f \( -name "*.dmg" -o -name "*.zip" -o -name "*.app" \) -exec ls -la {} \;
@@ -240,15 +184,10 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.os }}-artifacts
+          name: macos-artifacts
           path: |
-            **/*.exe
-            **/*.msi
             **/*.dmg
             **/*.zip
-            **/*.AppImage
-            **/*.deb
-            **/*.rpm
           retention-days: 5
 
   release:
@@ -274,7 +213,7 @@ jobs:
       - name: List downloaded artifacts
         run: |
           echo "=== Downloaded artifacts ==="
-          find . -type f \( -name "*.exe" -o -name "*.msi" -o -name "*.dmg" -o -name "*.zip" -o -name "*.AppImage" -o -name "*.deb" -o -name "*.rpm" \) -exec ls -la {} \;
+          find . -type f \( -name "*.dmg" -o -name "*.zip" \) -exec ls -la {} \;
           echo "=== All files in current directory ==="
           ls -la
 
@@ -282,7 +221,7 @@ jobs:
         id: get_files
         run: |
           echo "files<<EOF" >> $GITHUB_OUTPUT
-          find . -type f \( -name "*.exe" -o -name "*.msi" -o -name "*.dmg" -o -name "*.zip" -o -name "*.AppImage" -o -name "*.deb" -o -name "*.rpm" \) | while read file; do
+          find . -type f \( -name "*.dmg" -o -name "*.zip" \) | while read file; do
             filename=$(basename "$file")
             size=$(stat -c%s "$file" 2>/dev/null || stat -f%z "$file" 2>/dev/null || echo "0")
             echo "{\"name\":\"$filename\",\"size\":$size}"
@@ -297,13 +236,8 @@ jobs:
           prerelease: false
           generate_release_notes: true
           files: |
-            release/*.exe
-            release/*.msi
             release/*.dmg
             release/*.zip
-            release/*.AppImage
-            release/*.deb
-            release/*.rpm
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
