--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "url": "https://github.com/0-ROK/RiSA.git"
   },
   "devDependencies": {
+    "@electron/notarize": "^3.0.2",
     "@types/node": "^24.3.0",
     "@types/node-forge": "^1.3.13",
     "concurrently": "^9.2.0",
@@ -104,6 +105,7 @@
         }
       ],
       "artifactName": "${productName}-${version}-mac-${arch}.${ext}"
-    }
+    },
+    "afterSign": "scripts/notarize.js"
   }
 }
