--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "antd": "^5.27.0",
+    "dayjs": "^1.11.18",
     "electron-store": "^10.1.0",
     "electron-updater": "^6.6.2",
     "node-forge": "^1.3.1",
