--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "risa",
-  "version": "0.1.8",
+  "version": "0.1.16",
   "main": "dist/main.js",
   "scripts": {
     "dev": "concurrently \"npm run dev:renderer\" \"npm run dev:main\"",
@@ -66,7 +66,11 @@
   "build": {
     "appId": "com.risateam.risa",
     "productName": "RiSA",
-    "publish": null,
+    "publish": {
+      "provider": "github",
+      "owner": "0-ROK",
+      "repo": "RiSA"
+    },
     "directories": {
       "output": "release"
     },
