chore: release.yml 파일에 추가 파일 패턴 포함
- 배포 시 release 디렉토리 내 .yml 및 .blockmap 파일을 포함하도록 설정 변경

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -253,6 +253,8 @@ jobs:
           files: |
             release/*.dmg
             release/*.zip
+            release/*.yml
+            release/*.blockmap
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
