--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@types/node-rsa": "^1.1.4",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
