feat: 웹 렌더러 및 코드 분할 최적화
- package.json에서 dev:web 스크립트를 추가하여 웹 환경에서의 개발 서버 실행을 개선
- webpack.config.js에서 웹 타겟에 따른 alias 설정을 추가하여 불필요한 모듈을 제외
- App.tsx에서 React.lazy를 사용하여 페이지 및 컴포넌트의 코드 분할을 구현, 로딩 시 스피너 표시로 사용자 경험 향상
- UpdateNotification 컴포넌트를 Suspense로 감싸 불필요한 렌더링 방지

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "concurrently \"npm run dev:renderer\" \"npm run dev:main\"",
-    "dev:renderer": "cross-env WEB_TARGET=web webpack serve --config webpack.config.js --env NODE_ENV=development",
+    "dev:renderer": "webpack serve --config webpack.config.js --env NODE_ENV=development",
+    "dev:web": "cross-env WEB_TARGET=web NODE_ENV=development webpack serve --config webpack.config.js",
     "dev:main": "webpack --config webpack.config.js --env NODE_ENV=development --watch",
     "build": "npm run build:renderer && npm run build:main && npm run build:preload",
     "build:main": "cross-env TARGET=main webpack --config webpack.config.js --mode production",
